Nop bai tap buoi 1

--- a/Day_1/day_1.html
+++ b/Day_1/day_1.html
@@ -5,9 +5,119 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bai tap ve nha buoi 1</title>
+    <title>Cách dễ nhất để học HTML/CSS cho người mới bắt đầu!</title>
 </head>
 <body>
+    <!--Đây là thẻ heading 1-->
+    <h1>Cách dễ nhất để học HTML/CSS cho người mới bắt đầu!</h1>
+
+    <!--Đây là thẻ nội dung-->
+    <p>Thực hành 8 dự án trên Figma, 300+ bài tập và thử thách, mua một lần học mãi mãi, được thiết kế và hướng dẫn bởi Sơn Đặng.</p>
+
+    <!--Đây là thẻ heading 2-->
+    <h2>Khoá học này dành cho ai?</h2>
+
+    <p>1. Sinh Viên IT</p>
+    <p>Bạn muốn học các kiến thức thực tế ở trường không dạy? Bạn muốn có kiến thức vững chắc để năm sau đi thực tập tại doanh nghiệp?</p>
+
+    <p>4. Người Đã Đi Làm</p>
+    <p>Bạn muốn hiểu sâu sắc về HTML/CSS để nâng cao tay nghề? Bạn đang chuyên Backend giờ chuyển qua làm Frontend?</p>
+
+    <p>2. Người Trái Ngành/Chuyển Nghề</p>
+    <p>Bạn muốn hiểu sâu sắc về HTML/CSS để nâng cao tay nghề? Bạn đang chuyên Backend giờ chuyển qua làm Frontend?</p>
+
+
+    <h2>Bạn sẽ học được những gì?</h2>
+
+
+    <h2>Bạn sẽ làm được những gì?</h2>
+
+    <p>Khóa học hướng dẫn bạn thực hành 8 dự án trên Figma. Từ đó, bạn có thể tự làm hầu hết mọi giao diện trang web mà bạn thấy.</p>
+    <p>Dự án 1: Real Estate Landing Page</p>
+    <p>Dự án 2: Education Platform Website</p>
+    <p>Dự án 3: Dental Care Landing Page</p>
+    <p>Dự án 4: Lucy-Pet Care Landing Page</p>
+    <p>Dự án 5: Mobile Banking Website</p>
+    <p>Dự án 6: Arif Personal Portfolio Website</p>
+    <p>Dự án 7: Podcast Landing Page</p>
+    <p>Dự án 8: Grocery Ecommerce Website</p>
+
+
+    <h2>Không sợ quên kiến thức với Flashcards </h2>
+
+    <p>Việc ghi nhớ không còn là vấn đề nữa. Flashcards là phương pháp ghi nhớ thông qua việc lặp lại, kiến thức trong khóa học sẽ được bạn ghi nhớ trong dài hạn.</p>
+    <p>Chỉ với chiếc điện thoại thông minh, giờ đây bạn có thể ôn lại kiến thức ở mọi lúc, mọi nơi.</p>
+
+
+    <h2>Phản hồi từ học viên</h2>
+
+
+    <h2>Người hướng dẫn tận tâm</h2>
+
+    <p>Sơn Đặng là Founder của Cộng Đồng Học Lập Trình F8. Hiện tại, anh là một Fullstack developer với 10+ năm kinh nghiệm làm việc thực tế.</p>
+    <p>Các khóa học của Sơn Đặng được yêu thích bởi cách truyền đạt vô cùng dễ hiểu, cách anh tạo động lực cho học viên và sự tận tâm trong từng bài giảng.</p>
+    <p>*Sơn Đặng đã bỏ ra 1 năm để làm nội dung cho khóa học này!</p>
+
+
+    <h2>Cảm nhận của học viên</h2>
+
+    <h2>Tại sao nên học khóa học này?</h2>
+
+    <h3>Khác biệt khóa Free</h3>
+    <h3>Nền tảng hàng đầu</h3>
+    <h3>Người "thầy" tâm huyết</h3>
+
+
+    <h2>Câu hỏi thường gặp</h2>
+
+    <h3>Đối tượng phù hợp</h3>
+    <h4>Khóa học này có phù hợp với người hoàn toàn mới?</h4>
+    <p>Khóa học này hoàn toàn phù hợp với người mới, chưa có nền tảng vì được thiết kế bài bản, chú trọng đi từ căn bản nhất tới nâng cao. Luôn hướng tới mục tiêu cung cấp nguồn kiến thức và hướng dẫn chi tiết nhất có thể. Hỗ trợ học viên tận tình, tâm huyết. Từ đó, giúp bạn có động lực học và tiến xa hơn trong quá trình học tập.</p>
+
+    <h4>Nếu tôi đã học khóa miễn phí thì khóa học này còn phù hợp?</h4>
+    <p>Dù bạn đã học miễn phí thì khóa học này vẫn RẤT cần cho bạn. Trong khóa học đề cập tới rất nhiều kiến thức chuyên sâu mà bình thường không có khóa học nào đề cập tới (bạn có thể vào học thử và xem outline bài học).</p>
+
+
+    <h3>Khóa học Pro & Free</h3>
+    <h4>Khóa học Pro có gì khác khóa học Free</h4>
+    <p>Điểm khác biệt lớn nhất đó chính là chất lượng và số lượng nội dung. Bạn hãy tin đây là khóa học Pro đầy đủ và chi tiết nhất bạn từng thấy. Khóa học giúp bạn có nền móng cực vững chắc để trở thành nhà phát triển web chuyên nghiệp trong tương lai. Ngoài ra, các bạn sẽ được học trên nền tảng lập trình hoàn toàn mới - nền tảng học lập trình Pro. Chất lượng khóa học được nâng cao, từ hình ảnh, âm thanh, vv. Bài học đa dạng, gồm 7+ dạng bài học khác nhau, bài tập phong phú & đa dạng hơn, được làm dự án thực chiến, được trao đổi trực tiếp với Tester, được hỗ trợ trực tiếp từ đội ngũ kỹ thuật của F8 và rất nhiều quyền lợi khác.</p>
+
+    <h4>Khóa Free có bị khóa không?</h4>
+    <p>Mở bán khóa Pro, nhưng khóa Free sẽ không bị khóa, luôn được mở và cập nhật thêm kiến thức nên các bạn yên tâm học nhé.</p>
+
+    <h3>Quyền lợi</h3>
+    <h4>Tôi có thể xem video bao nhiêu lần?</h4>
+    <p>Với những video đã học qua, bạn có thể thỏa thích xem lại bất cứ video nào mà bạn muốn, không giới hạn số lần xem video. F8 thậm chí còn khuyến khích bạn xem càng nhiều càng tốt để có thể nắm vững kiến thức hơn bạn nhé.</p>
+
+    <h4>Tôi có thể học vào thời gian nào?</h4>
+    <p>Bài giảng đã được thiết kế sẵn, nội dung chi tiết và đầy đủ. Chỉ cần có Internet, bạn có thể học bất kỳ lúc nào, bất kỳ nơi đâu. Bạn luôn có thể chủ động thời gian và địa điểm mà không cần lo lắng gì.</p>
+
+
+    <h3>Ứng dụng thực tế</h3>
+
+    <h4>Tôi có thể ứng dụng được ngay sau khi học không?</h4>
+    <p>Chắc chắn rồi! F8 luôn hướng tới các bạn học đi đôi với hành. Vì thế, sau mỗi bài học video hoặc văn bản, bạn sẽ được làm rất nhiều bài tập để cô đọng lại kiến thức, nắm vững cú pháp, thậm chí là làm một thử thách code mới. Quan trọng hơn hết, bạn phải làm xong các dự án thực chiến - được thiết kế bằng Figma thì mới hoàn thành khóa học nhé.</p>
+
+    <h3>Thanh toán</h3>
+
+    <h4>Khi nào thì đơn hàng được duyệt?</h4>
+    <p>Sau khi thanh toán thành công, khóa học sẽ được kích hoạt tự động. Nếu thanh toán bằng MoMo, bạn vui lòng chụp lại bill và gửi qua Fanpage hoặc gọi tới hotline 08 1919 8989 để được hỗ trợ, vì ngân hàng cắt nội dung chuyển khoản nên không thể kích hoạt tự động. Bạn nên giữ lại bill để F8 có thể hỗ trợ nhanh hơn nếu có vấn đề về tài khoản.</p>
+
+    <h4>Sau thanh toán, khi nào tôi có thể học?</h4>
+    <p>Sau khi F8 nhận được thanh toán từ bạn, khóa học của bạn sẽ được kích hoạt và bạn có thể học ngay sau đó luôn bạn nhé.</p>
+
+    <h3>Hỗ trợ học viên</h3>
+    <h4>Tôi có được hỗ trợ trong quá trình học không?</h4>
+    <p>Tất nhiên rồi! Mặc dù bài tập đã có hướng dẫn, video chữa bài tương ứng và được giải thích chi tiết nhất có thể nhưng nếu bạn gặp khó, bạn không cần lo lắng không biết hỏi ai hay không có người hướng dẫn. Tại mỗi bài học ở F8, bạn luôn có thể đặt câu hỏi, trao đổi và tương tác với các bạn cùng học. Ngoài ra, chuyên viên hỗ trợ F8 sẽ luôn tận tình hướng dẫn nếu bạn gặp khó khăn bạn nhé.</p>
+
+    <h4>Tôi muốn hỏi thì đăng câu hỏi ở đâu?</h4>
+    <p>Tại mỗi bài học luôn có phần đăng câu hỏi. Bạn chỉ cần đăng câu hỏi mới và chờ câu trả lời của đội ngũ hỗ trợ trong ít phút sau đó. Ngoài ra, ngay chính các học viên trong khóa học cũng có thể tham gia hỗ trợ lẫn nhau nên bạn hãy yên tâm nhé!</p>
+
+    <h3>Khóa học Offline tại F8</h3>
+    <h4>F8 có lớp học offline không?</h4>
+    <p>F8 có lớp offline tại Hà Nội bạn nhé. Ngoài các khóa học online, F8 cũng triển khai đào tạo offline với các mảng Front-end, Back-end, Fullstack. Để nắm chi tiết hơn, bạn hãy đăng ký tư vấn ngay nhé.</p>
+
+    <h2>Đăng ký tư vấn lộ trình học hoàn toàn miễn phí!</h2>
 
 </body>
 </html>
