Nop bai tap buoi 3

--- a/Day_3/day_3.html
+++ b/Day_3/day_3.html
@@ -36,7 +36,7 @@
                 <td>Mon</td>
                 <td>8AM</td>
                 <td>5PM</td>
-                <td colspan="2" align="center">HTML</td>
+                <td colspan="2" align="center"><a href="./Topic/HTML_doc.html" target="_blank">HTML</a></td>
                 <td>OK</td>
             </tr>
 
@@ -57,7 +57,7 @@
             <tr> <!--Hàng 7-->
                 <td>2PM</td>
                 <td>5PM</td>
-                <td colspan="2" align="center">JS</td>
+                <td colspan="2" align="center"><a href="./Topic/JS_doc.html" target="_blank">JS</a></td>
                 <td>GOOD</td>
             </tr>
 
