Nop bai tap buoi 4

--- a/Day_4/day_4.html
+++ b/Day_4/day_4.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <!--Bài tập: Form Logic-->
-    <a href="formLogin.html">1.Form Login</a>
+    <a href="formLogin.html" target="_blank">1.Form Login</a>
     <br>
     <!--Bài tập: Form Contact-->
-    <a href="formContact.html">2.Form Contact</a>
+    <a href="formContact.html" target="_blank">2.Form Contact</a>
 </body>
 </html>
