Nop bai tap buoi 4

--- a/Day_4/formContact.html
+++ b/Day_4/formContact.html
@@ -34,7 +34,7 @@
             <tr> <!--Hàng 3-->
                 <td colspan="2"> <!--Your message here-->
                     <label for="yourMessageHere" hidden="hidden">Your message here</label>
-                    <textarea id="yourMessageHere" name="yourMessageHere" placeholder="*Your message here" cols="80" rows="10"></textarea>
+                    <textarea id="yourMessageHere" name="yourMessageHere" placeholder="*Your message here" cols="80" rows="10" required></textarea>
                 </td>
             </tr>
 
