--- a/KIEMTRAHTML/index.html
+++ b/KIEMTRAHTML/index.html
@@ -49,13 +49,12 @@
     <h2 style="color: rgb(69, 137, 102)">Work experience</h2>
     <hr>
     <table cellpadding="10" cellspacing="0" width="50%">
-
         <tr> <!-- Hàng 1 -->
             <td valign="top"><b>01/2018 – Present</b></td>
             <td>
                 <b>F8 TECHNOLOGY EDUCATION.,JSC</b>
                 <br>
-                <p><i>Full-stack Developer</i></p>
+                <i>Full-stack Developer</i>
                 <ul>
                     <li>Programme outsourcing projects</li>
                     <li>Create coding frames and design database based on project descriptions</li>
@@ -68,7 +67,7 @@
             <td>
                 <b>AI&T JSC</b>
                 <br>
-                <p><i>Full-stack Developer</i></p>
+                <i>Full-stack Developer</i>
                 <ul>
                     <li>Programme outsourcing projects</li>
                     <li>Create coding frames and design database based on project descriptions</li>
@@ -81,13 +80,72 @@
             <td>
                 <b>FREELANCER</b>
                 <br>
-                <p><i>Full-stack Developer</i></p>
+                <i>Full-stack Developer</i>
                 <ul>
                     <li>Develop web module on given projects.</li>
                 </ul>
             </td>
         </tr>
     </table>
+
+    <h2 style="color: rgb(69, 137, 102)">Education</h2>
+    <hr>
+    <table cellpadding="10" cellspacing="0" width="50%">
+        <tr> <!-- Hàng 1 -->
+            <td valign="top" width="21%"><b>2011/10 – 2014/09</b></td>
+            <td colspan="2">
+                <b>FPT Polytechnic</b>
+            </td>
+        </tr>
+
+        <tr>
+            <td></td>
+            <td colspan="2">
+                <b>Major</b> - Website, Mobile Programming
+                <br>
+                Level - Good
+            </td>
+        </tr>
+
+        <tr> <!-- Hàng 3 -->
+            <td></td>
+
+            <td valign="top">
+                <b>Major</b>
+            </td>
+
+            <td>
+                <ul>
+                    <li>HTML, CSS, JavaScript (ReactJS, React-Native, Lit)</li>
+                    <li>PHP (Laravel, Symfony, Codeigniter, Yii)</li>
+                    <li>Node (ExpressJS)</li>
+                    <li>RESTful API, GraphQL</li>
+                    <li>MySQL, PostgreSQL, NoSQL (MongoDB)</li>
+                    <li>Server (Apache, Nginx, Redis, Memcached, Queue, Log, Crontjob...), Rancher, K8S, Docker</li>
+                    <li>AWS (Load balancing, EC2, ECS, Router 53, RDS, S3)</li>
+                </ul>
+            </td>
+        </tr>
+
+        <tr> <!-- Hàng 4 -->
+            <td></td>
+
+            <td valign="top">
+                <b>Other</b>
+            </td>
+
+            <td>
+                <ul>
+                    <li>Ruby (Ruby on Rails)</li>
+                    <li>SVN, GIT</li>
+                    <li>Python (selenium automation test, crawler)</li>
+                    <li>Elasticsearch</li>
+                    <li>Tensorflow</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
+
 
 </body>
 </html>
