Nop bai tap buoi 5

--- a/Day_5/day_5.html
+++ b/Day_5/day_5.html
@@ -9,24 +9,49 @@
     <title>Day_5</title>
 </head>
 <body>
-    <!-- TH1 - Selector theo thẻ (p, h1, div…)-->
-    <h1>Học lập trình để đi làm</h1>
+    <h1>DANH MỤC SẢN PHẨM</h1>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aspernatur blanditiis debitis doloribus illo illum quis repellat reprehenderit ut voluptas.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aspernatur blanditiis debitis doloribus illo illum quis repellat reprehenderit ut voluptas.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci corporis ducimus facere itaque odit officiis tempora? Aperiam cumque eveniet incidunt ipsam laudantium libero placeat sed vel. Enim perspiciatis porro vitae?</p>
 
-    <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci dicta dolorem ea error exercitationem hic incidunt ipsum itaque perferendis vero.</p>
-        <p id="a">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci dicta dolorem ea error exercitationem hic incidunt ipsum itaque perferendis vero.</p>
+    <!--Sản phẩm 1-->
+    <div class="product-item">
+        <a href="#!"><img src="https://levents.asia/cdn/shop/files/Red_LSHOVLKB340UR0102FW24_1.jpg?v=1734625839&width=533" alt="Levent"></a>
+
+        <p>
+            <a href="#!">Levents® x Hello Kitty | Striped Baseball Jersey/ Red</a>
+        </p>
+
+        <p><del id="discount-1">680.000 VND</del> 120.000 VND</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, maxime quam. Aperiam iusto, molestias non quae rerum veniam. Deserunt exercitationem fugit ipsum iusto magni minima nesciunt praesentium quo, sed voluptates?</p>
     </div>
 
+    <hr>
 
-    <div class="product">
-        <p>Danh mục sản phẩm</p>
-        <div class="product-item">
-            <p>Sản phẩm thứ nhất</p>
-            <p>Sản phẩm thứ hai</p>
-        </div>
+    <!--Sản phẩm 2-->
+    <div class="product-item">
+        <a href="#!"><img src="https://levents.asia/cdn/shop/files/White_LTSRELKA444UW0101FW24_1.jpg?v=1734624701&width=533" alt="Levent"></a>
+
+        <p>
+            <a href="#!">Levents® x Hello Kitty | Icon Raglan Regular Tee/ White</a>
+        </p>
+
+        <p ><del id="discount-2">450.000 VND</del> 120.000 VND</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, maxime quam. Aperiam iusto, molestias non quae rerum veniam. Deserunt exercitationem fugit ipsum iusto magni minima nesciunt praesentium quo, sed voluptates?</p>
     </div>
+
+    <hr>
+
+    <!--Sản phẩm 3-->
+    <div class="product-item">
+        <a href="#!"><img src="https://levents.asia/cdn/shop/files/White_LTSOVLKA341UW0101FW24_1.jpg?v=1734626216&width=533" alt="Levent"></a>
+
+        <p>
+            <a href="#!">Levents® x Hello Kitty | Champion Oversize Jersey</a>
+        </p>
+
+        <p><del id="discount-3">300.000 VND</del> 120.000 VND</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, maxime quam. Aperiam iusto, molestias non quae rerum veniam. Deserunt exercitationem fugit ipsum iusto magni minima nesciunt praesentium quo, sed voluptates?</p>
+    </div>
+
 </body>
 </html>
