Nop bai tap buoi 6

--- a/Day_6/Day_6.html
+++ b/Day_6/Day_6.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <ol>
-    <li><a href="./Form%20Subscribe/formSubscribe.html">Form Subscribe</a></li>
-    <li><a href="./Custom%20List/customList.html">Custom List</a></li>
-    <li><a href="./HTML/html.html">HTMl</a></li>
+    <li><a href="./Form%20Subscribe/formSubscribe.html" target="_blank">Form Subscribe</a></li>
+    <li><a href="./Custom%20List/customList.html" target="_blank">Custom List</a></li>
+    <li><a href="./HTML/html.html" target="_blank">HTMl</a></li>
 </ol>
 </body>
 </html>
