--- a/Day_6/Form Subscribe/formSubscribe.html
+++ b/Day_6/Form Subscribe/formSubscribe.html
@@ -18,7 +18,7 @@
             We're building the largest self-service freelancing marketplace for people like you.
         </p>
 
-        <form action="" method="post">
+        <form action="https://api-gateway.fullstack.edu.vn/action_page.php" method="post">
             <input type="email" name="email" id="email" placeholder="Email address" required>
             <button type="submit">Send Me Opportunities</button>
         </form>
