Nop bai tap buoi 6

--- a/Day_6/Form Subscribe/formSubscribe.html
+++ b/Day_6/Form Subscribe/formSubscribe.html
@@ -19,6 +19,7 @@
         </p>
 
         <form action="https://api-gateway.fullstack.edu.vn/action_page.php" method="post">
+            <label for="email"></label>
             <input type="email" name="email" id="email" placeholder="Email address" required>
             <button type="submit">Send Me Opportunities</button>
         </form>
