Nop bai tap buoi 7

--- a/Day_7/baiTap1/baiTap1.html
+++ b/Day_7/baiTap1/baiTap1.html
@@ -37,7 +37,7 @@
         height: 269px;
         border-radius: 10px;
         position: absolute;
-        top: 175px;
+        top: 147px;
         right: 330px;
         box-shadow: 12px 19px 23px 0px rgba(0,0,0,0.6);
     }
@@ -53,6 +53,7 @@
 
     span {
         text-decoration: underline;
+        font-weight: 600;
     }
 </style>
 
