--- a/Day_7/Menu/menu.html
+++ b/Day_7/Menu/menu.html
@@ -25,66 +25,336 @@
             <li> <!--Home-->
                 <a href="#!" class="menu-icon">Home</a>
                 <ul class="sub-menu">
-                    <li><a href="#!">Home 1</a></li>
-                    <li><a href="#!">Home 2</a></li>
-                    <li><a href="#!">Home 3</a></li>
-                    <li><a href="#!">Home 4</a></li>
-                    <li><a href="#!">Home 5</a></li>
+                    <li>
+                        <a href="#!">Home 1</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Home 1.1</a></li>
+                            <li><a href="#!">Home 1.2</a></li>
+                            <li><a href="#!">Home 1.3</a></li>
+                            <li><a href="#!">Home 1.4</a></li>
+                            <li><a href="#!">Home 1.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Home 2</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Home 2.1</a></li>
+                            <li><a href="#!">Home 2.2</a></li>
+                            <li><a href="#!">Home 2.3</a></li>
+                            <li><a href="#!">Home 2.4</a></li>
+                            <li><a href="#!">Home 2.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Home 3</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Home 3.1</a></li>
+                            <li><a href="#!">Home 3.2</a></li>
+                            <li><a href="#!">Home 3.3</a></li>
+                            <li><a href="#!">Home 3.4</a></li>
+                            <li><a href="#!">Home 3.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Home 4</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Home 4.1</a></li>
+                            <li><a href="#!">Home 4.2</a></li>
+                            <li><a href="#!">Home 4.3</a></li>
+                            <li><a href="#!">Home 4.4</a></li>
+                            <li><a href="#!">Home 4.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Home 5</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Home 5.1</a></li>
+                            <li><a href="#!">Home 5.2</a></li>
+                            <li><a href="#!">Home 5.3</a></li>
+                            <li><a href="#!">Home 5.4</a></li>
+                            <li><a href="#!">Home 5.5</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
 
             <li> <!--Courses-->
                 <a href="#!" class="menu-icon">Courses</a>
                 <ul class="sub-menu">
-                    <li><a href="#!">Courses 1</a></li>
-                    <li><a href="#!">Courses 2</a></li>
-                    <li><a href="#!">Courses 3</a></li>
-                    <li><a href="#!">Courses 4</a></li>
-                    <li><a href="#!">Courses 5</a></li>
+                    <li>
+                        <a href="#!">Courses 1</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Courses 1.1</a></li>
+                            <li><a href="#!">Courses 1.2</a></li>
+                            <li><a href="#!">Courses 1.3</a></li>
+                            <li><a href="#!">Courses 1.4</a></li>
+                            <li><a href="#!">Courses 1.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Courses 2</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Courses 2.1</a></li>
+                            <li><a href="#!">Courses 2.2</a></li>
+                            <li><a href="#!">Courses 2.3</a></li>
+                            <li><a href="#!">Courses 2.4</a></li>
+                            <li><a href="#!">Courses 2.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Courses 3</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Courses 3.1</a></li>
+                            <li><a href="#!">Courses 3.2</a></li>
+                            <li><a href="#!">Courses 3.3</a></li>
+                            <li><a href="#!">Courses 3.4</a></li>
+                            <li><a href="#!">Courses 3.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Courses 4</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Courses 4.1</a></li>
+                            <li><a href="#!">Courses 4.2</a></li>
+                            <li><a href="#!">Courses 4.3</a></li>
+                            <li><a href="#!">Courses 4.4</a></li>
+                            <li><a href="#!">Courses 4.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Courses 5</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Courses 5.1</a></li>
+                            <li><a href="#!">Courses 5.2</a></li>
+                            <li><a href="#!">Courses 5.3</a></li>
+                            <li><a href="#!">Courses 5.4</a></li>
+                            <li><a href="#!">Courses 5.5</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
 
             <li> <!--Dashboard-->
                 <a href="#!" class="menu-icon">Dashboard</a>
                 <ul class="sub-menu">
-                    <li><a href="#!">Dashboard 1</a></li>
-                    <li><a href="#!">Dashboard 2</a></li>
-                    <li><a href="#!">Dashboard 3</a></li>
-                    <li><a href="#!">Dashboard 4</a></li>
-                    <li><a href="#!">Dashboard 5</a></li>
+                    <li>
+                        <a href="#!">Dashboard 1</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Dashboard 1.1</a></li>
+                            <li><a href="#!">Dashboard 1.2</a></li>
+                            <li><a href="#!">Dashboard 1.3</a></li>
+                            <li><a href="#!">Dashboard 1.4</a></li>
+                            <li><a href="#!">Dashboard 1.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Dashboard 2</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Dashboard 2.1</a></li>
+                            <li><a href="#!">Dashboard 2.2</a></li>
+                            <li><a href="#!">Dashboard 2.3</a></li>
+                            <li><a href="#!">Dashboard 2.4</a></li>
+                            <li><a href="#!">Dashboard 2.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Dashboard 3</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Dashboard 3.1</a></li>
+                            <li><a href="#!">Dashboard 3.2</a></li>
+                            <li><a href="#!">Dashboard 3.3</a></li>
+                            <li><a href="#!">Dashboard 3.4</a></li>
+                            <li><a href="#!">Dashboard 3.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Dashboard 4</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Dashboard 4.1</a></li>
+                            <li><a href="#!">Dashboard 4.2</a></li>
+                            <li><a href="#!">Dashboard 4.3</a></li>
+                            <li><a href="#!">Dashboard 4.4</a></li>
+                            <li><a href="#!">Dashboard 4.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Dashboard 5</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Dashboard 5.1</a></li>
+                            <li><a href="#!">Dashboard 5.2</a></li>
+                            <li><a href="#!">Dashboard 5.3</a></li>
+                            <li><a href="#!">Dashboard 5.4</a></li>
+                            <li><a href="#!">Dashboard 5.5</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
 
             <li> <!--Pages-->
                 <a href="#!" class="menu-icon">Pages</a>
                 <ul class="sub-menu">
-                    <li><a href="#!">Pages 1</a></li>
-                    <li><a href="#!">Pages 2</a></li>
-                    <li><a href="#!">Pages 3</a></li>
-                    <li><a href="#!">Pages 4</a></li>
-                    <li><a href="#!">Pages 5</a></li>
+                    <li>
+                        <a href="#!">Pages 1</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Pages 1.1</a></li>
+                            <li><a href="#!">Pages 1.2</a></li>
+                            <li><a href="#!">Pages 1.3</a></li>
+                            <li><a href="#!">Pages 1.4</a></li>
+                            <li><a href="#!">Pages 1.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Pages 2</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Pages 2.1</a></li>
+                            <li><a href="#!">Pages 2.2</a></li>
+                            <li><a href="#!">Pages 2.3</a></li>
+                            <li><a href="#!">Pages 2.4</a></li>
+                            <li><a href="#!">Pages 2.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Pages 3</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Pages 3.1</a></li>
+                            <li><a href="#!">Pages 3.2</a></li>
+                            <li><a href="#!">Pages 3.3</a></li>
+                            <li><a href="#!">Pages 3.4</a></li>
+                            <li><a href="#!">Pages 3.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Pages 4</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Pages 4.1</a></li>
+                            <li><a href="#!">Pages 4.2</a></li>
+                            <li><a href="#!">Pages 4.3</a></li>
+                            <li><a href="#!">Pages 4.4</a></li>
+                            <li><a href="#!">Pages 4.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Pages 5</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Pages 5.1</a></li>
+                            <li><a href="#!">Pages 5.2</a></li>
+                            <li><a href="#!">Pages 5.3</a></li>
+                            <li><a href="#!">Pages 5.4</a></li>
+                            <li><a href="#!">Pages 5.5</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
 
             <li> <!--Elements-->
                 <a href="#!" class="menu-icon">Elements</a>
                 <ul class="sub-menu">
-                    <li><a href="#!">Elements 1</a></li>
-                    <li><a href="#!">Elements 2</a></li>
-                    <li><a href="#!">Elements 3</a></li>
-                    <li><a href="#!">Elements 4</a></li>
-                    <li><a href="#!">Elements 5</a></li>
+                    <li>
+                        <a href="#!">Elements 1</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Elements 5.1</a></li>
+                            <li><a href="#!">Elements 5.2</a></li>
+                            <li><a href="#!">Elements 5.3</a></li>
+                            <li><a href="#!">Elements 5.4</a></li>
+                            <li><a href="#!">Elements 5.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Elements 2</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Elements 5.1</a></li>
+                            <li><a href="#!">Elements 5.2</a></li>
+                            <li><a href="#!">Elements 5.3</a></li>
+                            <li><a href="#!">Elements 5.4</a></li>
+                            <li><a href="#!">Elements 5.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Elements 3</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Elements 5.1</a></li>
+                            <li><a href="#!">Elements 5.2</a></li>
+                            <li><a href="#!">Elements 5.3</a></li>
+                            <li><a href="#!">Elements 5.4</a></li>
+                            <li><a href="#!">Elements 5.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Elements 4</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Elements 5.1</a></li>
+                            <li><a href="#!">Elements 5.2</a></li>
+                            <li><a href="#!">Elements 5.3</a></li>
+                            <li><a href="#!">Elements 5.4</a></li>
+                            <li><a href="#!">Elements 5.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Elements 5</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Elements 5.1</a></li>
+                            <li><a href="#!">Elements 5.2</a></li>
+                            <li><a href="#!">Elements 5.3</a></li>
+                            <li><a href="#!">Elements 5.4</a></li>
+                            <li><a href="#!">Elements 5.5</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
 
             <li> <!--Blog-->
                 <a href="#!" class="menu-icon">Blog</a>
                 <ul class="sub-menu">
-                    <li><a href="#!">Home 1</a></li>
-                    <li><a href="#!">Home 2</a></li>
-                    <li><a href="#!">Home 3</a></li>
-                    <li><a href="#!">Home 4</a></li>
-                    <li><a href="#!">Home 5</a></li>
+                    <li>
+                        <a href="#!">Blog 1</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Blog 1.1</a></li>
+                            <li><a href="#!">Blog 1.2</a></li>
+                            <li><a href="#!">Blog 1.3</a></li>
+                            <li><a href="#!">Blog 1.4</a></li>
+                            <li><a href="#!">Blog 1.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Blog 2</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Blog 2.1</a></li>
+                            <li><a href="#!">Blog 2.2</a></li>
+                            <li><a href="#!">Blog 2.3</a></li>
+                            <li><a href="#!">Blog 2.4</a></li>
+                            <li><a href="#!">Blog 2.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Blog 3</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Blog 3.1</a></li>
+                            <li><a href="#!">Blog 3.2</a></li>
+                            <li><a href="#!">Blog 3.3</a></li>
+                            <li><a href="#!">Blog 3.4</a></li>
+                            <li><a href="#!">Blog 3.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Blog 4</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Blog 4.1</a></li>
+                            <li><a href="#!">Blog 4.2</a></li>
+                            <li><a href="#!">Blog 4.3</a></li>
+                            <li><a href="#!">Blog 4.4</a></li>
+                            <li><a href="#!">Blog 4.5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#!">Blog 5</a>
+                        <ul class="sub-menu">
+                            <li><a href="#!">Blog 5.1</a></li>
+                            <li><a href="#!">Blog 5.2</a></li>
+                            <li><a href="#!">Blog 5.3</a></li>
+                            <li><a href="#!">Blog 5.4</a></li>
+                            <li><a href="#!">Blog 5.5</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
         </ul>
