Nop bai tap buoi 7

--- a/Day_8/Form/form.html
+++ b/Day_8/Form/form.html
@@ -112,13 +112,13 @@
 
 
 
-    <div class="end">
+    <label class="end">
         <input type="checkbox" name="box" id="box">
         <img src="./img/check.svg" alt="check" class="check">
         
-        <label for="box">Send me a copy of this message</label>
+        <span for="box">Send me a copy of this message</span>
         <button type="submit">SEND</button>
-    </div>
+    </label>
 </form>
 
 
