Nop bai tap buoi 7

--- a/Day_8/Form/form.html
+++ b/Day_8/Form/form.html
@@ -111,7 +111,7 @@
     </div>
 
 
-
+<!--Đã fixx-->
     <label class="end">
         <input type="checkbox" name="box" id="box">
         <img src="./img/check.svg" alt="check" class="check">
