Nop bai tap buoi 9

--- a/Day_9/day_9.html
+++ b/Day_9/day_9.html
@@ -113,7 +113,7 @@
                 <!-- Modal Header -->
                 <div class="modal-header">
                     <span class="modal-title">New member</span>
-                    <label for="show"><span class="btn-exit" href="#"><span class="mdi mdi-close"></span></span></label>
+                    <label for="show"><span class="mdi mdi-close"></span></label>
                 </div>
 
                 <!-- Modal Body -->
