Nop bai tap buoi 9

--- a/HTML-CSS-FINAL/index.html
+++ b/HTML-CSS-FINAL/index.html
@@ -74,7 +74,7 @@
         <!-- Main -->
         <main>
             <!-- * * * * Hero Section ✅ * * * * -->
-            <section class="hero">
+            <section class="hero border-test">
                 <!-- Hero Section Frame -->
                 <div class="container">
 
@@ -126,7 +126,7 @@
             </section>
 
             <!-- * * * * Trending Collection ✅ * * * * -->
-            <section class="trending"  >
+            <section class="trending border-test"  >
                 <!-- Trending Collection Frame -->
                 <div class="container">
 
@@ -177,7 +177,7 @@
                                         <img src="./assets/img/Primary%20Photo%20Placeholder%203.svg" alt="Magic Mushrooms">
                                     </div>
                                     <div class="secondary-image-item">
-                                        <img src="./assets/icons/Avatar%20%237.svg" alt="Magic Mushrooms">
+                                        <img src="./assets/img/Primary%20Photo%20Placeholder%203.svg" alt="Magic Mushrooms">
                                     </div>
                                     <div class="secondary-image-item"><span>1025+</span></div>
                                 </div>
@@ -223,7 +223,7 @@
             </section>
 
             <!-- * * * * Top creators ✅ * * * * -->
-            <section class="top-creators">
+            <section class="top-creators border-test">
                 <!-- Top Rated Artists Frame -->
                 <div class="container">
                     <!-- Section Headline & Button -->
@@ -235,7 +235,7 @@
                             </div>
                             <a href="#!" class="btn btn--secondary top-creators-btn">
                                 <img src="./assets/icons/RocketLaunch%20-%202.svg" alt="" />
-                                <span class="btn__text">Get Stared</span>
+                                <span class="btn__text">View Ranking</span>
                             </a>
                         </div>
                     </div>
@@ -405,7 +405,7 @@
             </section>
 
             <!-- * * * * Browse Categories ✅ * * * * -->
-            <section class="browse-categories">
+            <section class="browse-categories border-test">
                 <!-- Browse Categories Frame -->
                 <div class="container">
                     <!-- Section Headline -->
@@ -512,7 +512,7 @@
             </section>
 
             <!-- * * * * Discover More NFTs ✅ * * * * -->
-            <section class="discover">
+            <section class="discover border-test">
                 <!-- Discover More NFTs Frame-->
                 <div class="container">
                     <!-- Section Headline & Button-->
@@ -606,7 +606,7 @@
             </section>
 
             <!-- * * * * Magic Mashrooms (NFT Highlight) ✅ * * * *-->
-            <section class="magic">
+            <section class="magic border-test">
                 <!-- NFT Highlight Frame-->
                 <div class="container">
                         <div class="overlay"></div>
@@ -654,7 +654,7 @@
             </section>
 
             <!-- * * * * How it works ✅ * * * * -->
-            <section class="works">
+            <section class="works border-test">
                 <!-- Discover More NFTs Frame-->
                 <div class="container">
 
@@ -698,10 +698,10 @@
             </section>
 
             <!-- * * * * Join our weekly digest ✅ * * * * -->
-            <section class="join">
+            <section class="join border-test">
                 <!--Subscribe Widget Frame -->
                 <div class="container">
-                    <div class="join-frame">
+                    <form class="join-frame">
                         <!--Photo -->
                         <img src="./assets/img/Photo.svg" alt="" class="photo">
 
@@ -714,14 +714,14 @@
                             </div>
                             <!--Subscribe Form-->
                             <div class="subscribe-form">
-                                <span class="placeholder">Enter your email here</span>
+                                <input type="email" class="email" placeholder="Enter your email here"/>
                                 <a href="#!" class="btn btn--secondary subscribe-btn">
                                     <img src="./assets/icons/EnvelopeSimple.svg" alt="Subscribe">
                                     <span>Subscribe</span>
                                 </a>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </section>
         </main>
@@ -767,19 +767,19 @@
                         </div>
 
                         <!-- Subscribe -->
-                        <div class="subscribe">
+                        <form class="subscribe">
                             <span class="explore-title">Join our weekly digest</span>
                             <div class="subscribe-form-and-info">
                                 <span class="desc">Get exclusive promotions & updates straight to your inbox.</span>
                                 <div class="subscribe-form">
-                                    <span class="placeholder">Enter your email here</span>
+                                    <input type="email" class="email" placeholder="Enter your email here"/>
                                     <a href="#!" class="btn btn--secondary subscribe-btn">
                                         <img src="./assets/icons/EnvelopeSimple.svg" alt="Subscribe">
                                         <span>Subscribe</span>
                                     </a>
                                 </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
 
