--- a/Day_10/baitap_1/bai_1.html
+++ b/Day_10/baitap_1/bai_1.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 
-    <!--Style-->
+    <!--Style 1-->
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
