--- a/Day_10/day_10.html
+++ b/Day_10/day_10.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <a href="./baitap_1/bai_1.html">Bai 1</a>
-    <a href="./baitap_2/bai2.html">Bai 2</a>
+    <br>
+    <a href="./baitap_2/bai_2.html">Bai 2</a>
+    <br>
+    <a href="./baitap_3/bai_3.html">Bai 3</a>
 </body>
 </html>
