Nop bai tap buoi 10

--- a/HTML-CSS-FINAL/index.html
+++ b/HTML-CSS-FINAL/index.html
@@ -73,7 +73,7 @@
         </header>
         <!-- Main -->
         <main>
-            <!-- * * * * Hero Section ✅ * * * * -->
+            <!-- * * * * Hero Section ✅✅✅ * * * * -->
             <section class="hero border-test">
                 <!-- Hero Section Frame -->
                 <div class="container">
@@ -85,6 +85,21 @@
                             <h1 class="title">Discover digital art & Collect NFTs</h1>
                             <p class="desc">NFT marketplace UI created with Anima for Figma. Collect, buy and sell art from more than 20k NFT artists.</p>
                         </div>
+
+
+                        <!-- Highlighted NFT Mobile -->
+                        <div style="display: none" class="highlighted-nft-mobile">
+                            <img src="./assets/img/Image%20Placeholder.svg" alt="Discover digital art & Collect NFTs">
+
+                            <div class="caption">
+                                <strong class="title">Space Walking</strong>
+                                <div class="content">
+                                    <img width="24px" src="./assets/img/Avatar%20%2314.svg" alt="Animakid" class="avatar">
+                                    <span class="avatar-desc">Animakid</span>
+                                </div>
+                            </div>
+                        </div>
+
 
                         <!-- Button -->
                         <a href="#!" class="btn btn--secondary hero-btn">
@@ -125,7 +140,7 @@
                 </div>
             </section>
 
-            <!-- * * * * Trending Collection ✅ * * * * -->
+            <!-- * * * * Trending Collection ✅✅✅ * * * * -->
             <section class="trending border-test"  >
                 <!-- Trending Collection Frame -->
                 <div class="container">
@@ -222,7 +237,7 @@
                 </div>
             </section>
 
-            <!-- * * * * Top creators ✅ * * * * -->
+            <!-- * * * * Top creators ✅✅✅ * * * * -->
             <section class="top-creators border-test">
                 <!-- Top Rated Artists Frame -->
                 <div class="container">
@@ -233,6 +248,7 @@
                                 <h2 class="heading">Top creators</h2>
                                 <p class="subhead">Checkout Top Rated Creators on the NFT Marketplace</p>
                             </div>
+                            <!-- Button-->
                             <a href="#!" class="btn btn--secondary top-creators-btn">
                                 <img src="./assets/icons/RocketLaunch%20-%202.svg" alt="" />
                                 <span class="btn__text">View Ranking</span>
@@ -376,7 +392,6 @@
                         <!-- Item 11 -->
                         <div class="artist-card-item">
                             <img class="artist-avatar" src="./assets/img/avatar%20%2315.svg" alt="Dotgu">
-                            <div class="artist-avatar"></div>
                             <div class="artist-info">
                                 <strong class="artist-name">Dotgu</strong>
                                 <div class="additional-info">
@@ -390,7 +405,6 @@
                         <!-- Item 12 -->
                         <div class="artist-card-item">
                             <img class="artist-avatar" src="./assets/img/avatar%20%2317.svg" alt="Ghiblier">
-                            <div class="artist-avatar"></div>
                             <div class="artist-info">
                                 <strong class="artist-name">Ghiblier</strong>
                                 <div class="additional-info">
@@ -401,10 +415,16 @@
                             <div class="ranking"><span class="number">12</span></div>
                         </div>
                     </div>
+
+                    <!--Button Mobile-->
+                    <a style="display: none" href="#!" class="btn btn--secondary top-creators-btn-mobile">
+                        <img src="./assets/icons/RocketLaunch%20-%202.svg" alt="" />
+                        <span class="btn__text">View Ranking</span>
+                    </a>
                 </div>
             </section>
 
-            <!-- * * * * Browse Categories ✅ * * * * -->
+            <!-- * * * * Browse Categories ✅✅✅ * * * * -->
             <section class="browse-categories border-test">
                 <!-- Browse Categories Frame -->
                 <div class="container">
@@ -511,7 +531,7 @@
                 </div>
             </section>
 
-            <!-- * * * * Discover More NFTs ✅ * * * * -->
+            <!-- * * * * Discover More NFTs ✅✅✅ * * * * -->
             <section class="discover border-test">
                 <!-- Discover More NFTs Frame-->
                 <div class="container">
@@ -521,6 +541,7 @@
                             <h2 class="heading">Dis cover More NFTs</h2>
                             <p class="subhead">Explore new trending NFTs</p>
                         </div>
+                        <!--Button-->
                         <a href="#!" class="btn btn--secondary discover-btn">
                             <img width="20px" src="./assets/icons/Eye.svg" alt="" />
                             <span class="btn__text">See All</span>
@@ -602,10 +623,16 @@
                             </div>
                         </div>
                     </div>
+
+                    <!--Button Mobile-->
+                    <a style="display: none" href="#!" class="btn btn--secondary discover-btn-mobile">
+                        <img width="20px" src="./assets/icons/Eye.svg" alt="" />
+                        <span class="btn__text">See All</span>
+                    </a>
                 </div>
             </section>
 
-            <!-- * * * * Magic Mashrooms (NFT Highlight) ✅ * * * *-->
+            <!-- * * * * Magic Mashrooms (NFT Highlight) ✅✅✅ * * * *-->
             <section class="magic border-test">
                 <!-- NFT Highlight Frame-->
                 <div class="container">
@@ -619,6 +646,8 @@
                                     <span class="avatar-name">Shroomie</span>
                                 </div>
                                 <strong class="title">Magic Mashrooms</strong>
+
+                                <!-- Button-->
                                 <a href="#!" class="btn btn--secondary magic-btn">
                                     <img width="20px" src="./assets/icons/Eye.svg" alt="" />
                                     <span class="btn__text">See NFT</span>
@@ -649,11 +678,16 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <a style="display: none" href="#!" class="btn btn--secondary magic-btn-mobile">
+                                <img width="20px" src="./assets/icons/Eye.svg" alt="" />
+                                <span class="btn__text">See NFT</span>
+                            </a>
                         </div>
                 </div>
             </section>
 
-            <!-- * * * * How it works ✅ * * * * -->
+            <!-- * * * * How it works ✅✅✅ * * * * -->
             <section class="works border-test">
                 <!-- Discover More NFTs Frame-->
                 <div class="container">
@@ -697,13 +731,13 @@
                 </div>
             </section>
 
-            <!-- * * * * Join our weekly digest ✅ * * * * -->
+            <!-- * * * * Join our weekly digest ✅✅✅ * * * * -->
             <section class="join border-test">
                 <!--Subscribe Widget Frame -->
                 <div class="container">
                     <form class="join-frame">
                         <!--Photo -->
-                        <img src="./assets/img/Photo.svg" alt="" class="photo">
+                        <img src="./assets/img/5772f9d568933f15578613e18c5adb73.png" alt="" class="photo">
 
                         <!--Content -->
                         <div class="content">
@@ -719,13 +753,20 @@
                                     <img src="./assets/icons/EnvelopeSimple.svg" alt="Subscribe">
                                     <span>Subscribe</span>
                                 </a>
+
+
                             </div>
+
+                            <a style="display: none" href="#!" class="btn btn--secondary subscribe-btn-mobile">
+                                <img src="./assets/icons/EnvelopeSimple.svg" alt="Subscribe">
+                                <span>Subscribe</span>
+                            </a>
                         </div>
                     </form>
                 </div>
             </section>
         </main>
-        <!-- Footer ✅ -->
+        <!-- Footer ✅✅ -->
         <footer>
             <div class="container">
                 <div class="footer-frame">
@@ -778,6 +819,11 @@
                                         <span>Subscribe</span>
                                     </a>
                                 </div>
+
+                                <a style="display: none;" href="#!" class="btn btn--secondary subscribe-btn-mobile">
+                                    <img src="./assets/icons/EnvelopeSimple.svg" alt="Subscribe">
+                                    <span>Subscribe</span>
+                                </a>
                             </div>
                         </form>
                     </div>
